objects/vlocity_cmt__OverrideDefinition__c.object
<CustomObject>
    <description>Product override definitions identify an overriding product child item or attribute assignment. Most often used for commercial offers that override the child items and attributes defined by the underlying product spec.</description>
    <fields>
        <fullName>vlocity_cmt__CompiledAttributeOverrideId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the object that holds the full attribute override JSON for the Product Child Item</description>
        <label>Compiled Attribute Override</label>
        <referenceTo>vlocity_cmt__CompiledAttributeOverride__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>Override_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Offer will exclude the Product Child Item or Attribute</description>
        <label>Is Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenAttributeAssignmentCategoryId__c</fullName>
        <formula>vlocity_cmt__OverriddenAttributeAssignmentId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overridden Attribute Assignment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenAttributeAssignmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Attribute Assignment</label>
        <referenceTo>vlocity_cmt__AttributeAssignment__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenOfferPricingComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Offer Pricing Component</label>
        <referenceTo>vlocity_cmt__OfferPricingComponent__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverriddenOfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenPricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverriddenElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Product Child Item</label>
        <referenceTo>vlocity_cmt__ProductChildItem__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverrideType__c</fullName>
        <label>Override Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Definition</fullName>
                </value>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Pricing Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingAttributeAssignmentCategoryId__c</fullName>
        <formula>vlocity_cmt__OverridingAttributeAssignmentId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overriding Attribute Assignment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingAttributeAssignmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Attribute Assignment</label>
        <referenceTo>vlocity_cmt__AttributeAssignment__c</referenceTo>
        <relationshipName>OverrideDefinitionsOverriding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingOfferPricingComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Offer Pricing Component</label>
        <referenceTo>vlocity_cmt__OfferPricingComponent__c</referenceTo>
        <relationshipLabel>Override Definitions (Offer Pricing Component)</relationshipLabel>
        <relationshipName>OverridingOfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingPricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Override Definitions (Overriding Pricing Element)</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverridingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Product Child Item</label>
        <referenceTo>vlocity_cmt__ProductChildItem__c</referenceTo>
        <relationshipName>OverrideDefinitionsOverriding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Override Definition</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Override Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>